[package]
name = "facelink_rs"
version = "1.0.0"
edition = "2021"
run = "main.rs"

[dependencies]
serde_json = "1.0.71"
serde = { version = "1.0.104", features = ["derive"] }
tokio = { version = "1.14.0", features = ["full"] }
termcolor = "1.1.2"
tungstenite = "0.16.0"
url = "2.2.2"
fsconfig = {version = "0.1.0", path = "fsconfig"} 
fllog = {version = "0.1.0", path = "fllog"}
regex = "1.5.4"
self_update = {version = "0.27.0", features = ["archive-zip"]}